--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "@n8n/chat": "^0.50.0",
     "@tailwindcss/vite": "^4.1.11",
     "leaflet": "^1.9.4",
